[package]
name = "game_growth"
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>", "adrocodes <adrocodes@users.noreply.github.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic"]

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.13" }
bevy_asset_loader = { version = "0.14" }
rand = { version = "0.8.3" }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.27", default-features = false }
image = { version = "0.24", default-features = false }
bevy_pancam = { version = "0.7.0", features = ["bevy_egui"] }
bevy-inspector-egui = "0.17.0"
noise = "0.8.2"
bevy_prototype_lyon = "0.7.2"

[build-dependencies]
embed-resource = "1.4"
